tests/lang/compile_fail/specialized_method_wrong_type.kojs
ptr: CPtr<Int32> = CPtr.null()
cs = ptr.to_cstring()
cs.print()
